--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "heroku": "^7.59.4",
+    "html-webpack-plugin": "^5.5.0",
+    "if-env": "^1.0.4",
+    "webpack": "^5.70.0",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.5.1"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
